<resources>
    <string name="app_name">IDRW</string>

    <string name="label_flags">Flags</string>
    <string name="flag_write_protected">Write protect</string>
    <string name="flag_auto_increment">+1</string>
    <string name="flag_auto_decrement">-1</string>

    <string name="label_type">Card Type</string>
    <string name="label_customer_id">Customer ID</string>
    <string name="label_wiegand_34">Wiegand 34</string>
    <string name="label_wiegand_26">Wiegand 26</string>

    <string name="btn_card_read">Read Card</string>
    <string name="btn_card_read_waiting">Waiting for card reading</string>
    <string name="btn_card_write">Write Card</string>
    <string name="btn_card_write_waiting">Waiting for card writing</string>

    <string name="toast_device_not_found">Device not found</string>
    <string name="toast_please_enable_auto_rotate">Please enable Auto-rotate function</string>
    <string name="toast_read_from_card">Read from card\n%s</string>
    <string name="toast_write_card_success">Write the card successfully!\n%s</string>
    <string name="toast_write_card_failed">Writing a card failed!</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_change_orientation">Change orientation</string>
    <string name="menu_homepage">Homepage</string>

    <string name="project_link">https://github.com/NiceLabs/usb-125khz-idrw</string>
</resources>
